--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div class="Headerinterno">
 			<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
+			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 			      <li><a href="Index.html">Home</a></li>
 			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
@@ -37,6 +38,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
+				      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 				      <li><a href="Index.html"><b>Home</b></a></li>
 				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
