--- a/Index.html
+++ b/Index.html
@@ -63,10 +63,11 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                 <span></span>
 
             <ul id="menu">
-              <li><a class="Menu_botao" href="Index.html">Home</a></li>
+	       <li><a class="Menu_botao" href="Index.html">Home</a></li>
               <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
               <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
               <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
+	      <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -27vh + -27vw)">The Herald</a></li>
             </ul>
            </div>
           
