Update Por que contratar 1.html

--- a/Por que contratar 1.html
+++ b/Por que contratar 1.html
@@ -16,6 +16,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div class="Headerinterno">
 			<img  src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
+			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 			      <li><a href="Index.html">Home</a></li>
 			      <li><a href="Por que contratar 1.html">Beneficios do Rpa</a></li>
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
@@ -32,6 +33,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
+				      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 				      <li><a href="Index.html"><b>Home</b></a></li>
 				      <li><a href="Por que contratar 1.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
@@ -56,10 +58,11 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                 <span></span>
 
             <ul id="menu">
-              <li><a class="Menu_botao" href="Index.html">Home</a></li>
-              <li><a class="Menu_botao" href="Por que contratar 1.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
-              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
-              <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
+              <li><a class="Menu_botao" href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
+              <li><a class="Menu_botao" href="Index.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Home</a></li>
+              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -16vh + -16vw)">Sobre o RPA</a></li>
+              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Quem Somos?</a></li>
+	      <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -27vh + -27vw)">Contate-Nos</a></li>
             </ul>
            </div>
           
