--- a/Supervisorio.html
+++ b/Supervisorio.html
@@ -1,5 +1,5 @@
 <html>
-	<link href="../BULB/Css/Style.css" rel="stylesheet">
+	<link href="Css/Style.css" rel="stylesheet">
 	<link media="only screen and (max-device-width: 480px)" href="../BULB/Css/Style - mobile.css" type="text/css" rel="stylesheet" />
 	<meta charset="utf-8">
 	<head>
