--- a/Index.html
+++ b/Index.html
@@ -116,7 +116,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
         <span class="desktop">
 		<div id="Conteudo_zero">
-			<div id="Separador_Dir" style="padding-right: 2%;">
+			<div id="Separador_Dir" style="background-color:powderblue;">
 			</div>
 		</div>
 		<div id="Conteudo_zero">
