--- a/Index.html
+++ b/Index.html
@@ -116,7 +116,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
         <span class="desktop">
 		<div id="Conteudo_zero">
-			<div id="Separador_Dir" style="background-color:powderblue; height: Calc( 7vh + 7vw); margin-top: Calc( 28vh + 28vw);">
+			<div id="Separador_Dir" style="background-color:powderblue; height: Calc( 7vh + 7vw); margin-top: Calc( 2vh + 2vw);margin-left: Calc( -28vh + -28vw);">
 			</div>
 		</div>
 		<div id="Conteudo_zero">
