--- a/Index.html
+++ b/Index.html
@@ -116,7 +116,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
         <span class="desktop">
 		<div id="Conteudo_zero">
-			<div id="Separador_Dir" style="background-color:powderblue; height: Calc( 7vh + 7vw); margin-top: Calc( -17vh + -17vw); margin-right: Calc( 33.2vh + 33.2vw);">
+			<div id="Separador_Dir" style="background-color:powderblue; height: Calc( 22vh + 22vw); width: Calc( 32vh + 32vw); margin-top: Calc( -17vh + -17vw); margin-right: Calc( 33.2vh + 33.2vw);">
 			</div>
 		</div>
 		<div id="Conteudo_zero">
