--- a/Index.html
+++ b/Index.html
@@ -116,8 +116,8 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
         <span class="desktop">
 		<div id="Conteudo_zero">
-			<div id="Separador_Dir" style="background-color:powderblue; height: Calc( 24.2vh + 24.2vw); width: Calc( 70vh + 70vw); margin-top: Calc( 0.4vh + 0.4vw); margin-right: Calc( -1vh + -1vw);">
-				<div id="Separador_Dir" style="background-color: #FFFF00; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-right: Calc( 1.5vh + 1.5vw);">
+			<div id="Separador_Dir" style="background-color:#CCCCCC; height: Calc( 24.2vh + 24.2vw); width: Calc( 70vh + 70vw); margin-top: Calc( 0.4vh + 0.4vw); margin-right: Calc( -1vh + -1vw);">
+				<div id="Separador_Dir" style="height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-right: Calc( 1.5vh + 1.5vw);">
 				</div>
 				<div id="Separador_Esq" style="background-color:Yellow; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-left: Calc( 3vh + 3vw);">
 				</div>
