--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         <span class="desktop">
 		<div id="Conteudo_zero">
 			<div id="Separador_Dir" style="background-color:#CCCCCC; height: Calc( 24.2vh + 24.2vw); width: Calc( 70vh + 70vw); margin-top: Calc( 0.4vh + 0.4vw); margin-right: Calc( -1vh + -1vw);">
-				<div id="Separador_Dir" style="background-color: Pink; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-right: Calc( 1.5vh + 1.5vw);">
+				<div id="Separador_Dir" style="background-color: Pink; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-right: Calc( 1.5vh + 1.5vw); padding: Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw);">
 					<h1 style="font-family: 'Verdana'; font-size: 2.2vw; color: Red;">Bulb Comercial</h1>
                				<h2 style="font-family:'Mulish', sans-serif;; text-align: justify; font-size:1vw; margin-top: Calc(-0.5vh + -0.5vw);"> O Bulb comercial é um conjunto de bots voltados para pequenas e médias empresas que não possuem uma equipe comercial bem estruturada 
 						ou que buscam resultados mais assertivos na captação e contato de leads. Com o Bulb comercial sua organização tem o potencial de capturar contatos de e-mail, Linkedin ou até WhatsApp de leads, cirurgicamente selecionados ou de maneira massiva!</h2>
