--- a/Index.html
+++ b/Index.html
@@ -121,7 +121,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 					<h1 style="font-family: 'Verdana'; font-size: 2.2vw; color: Red;">Bulb Comercial</h1>
                				<h2 style="font-family:'Mulish', sans-serif;; text-align: justify; font-size:1.5vw; margin-top: Calc(-0.5vh + -0.5vw);"> O Bulb comercial é um conjunto de bots voltados para pequenas e médias empresas que não possuem uma equipe comercial bem estruturada 
 						ou que buscam resultados mais assertivos na captação e contato de leads. Com o Bulb comercial sua organização tem o potencial de capturar contatos de e-mail, Linkedin ou até WhatsApp de leads, cirurgicamente selecionados ou de maneira massiva!</h2>
-                			 <a class="botao" href="Contatos.html" style="margin-top: Calc(0.2vh + 0.2vw); height: Calc( 3vh + 3vw); padding-top: Calc( 0.05vh + 0.05vw);"><b style="font-size: 1.5vw;">SAIBA MAIS!!!</b></a> 
+                			 <a class="botao" href="Contatos.html" style="margin-top: Calc(0.2vh + 0.2vw); height: Calc( 3vh + 3vw);"><b style="font-size: 1.5vw;">SAIBA MAIS!!!</b></a> 
 			</div>
 				</div>
 				<div id="Separador_Esq" style="background-color:Yellow; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-left: Calc( 3vh + 3vw);">
