--- a/Index.html
+++ b/Index.html
@@ -125,7 +125,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 				</div>
 				<div id="Separador_Esq" style="background-color:Yellow; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-left: Calc( 3vh + 3vw);">
-					<video src="Imagens/2023-05-25 23-27-18_Trim.mp4" style="width: 80%; margin-top: 0.05vh;" type="video/mp4">
+					<video src="Imagens/2023-05-25 23-27-18_Trim.mp4" style="width: 80%; margin-top: 0.05vh;"></video>
 				</div>
 			</div>
 		</div>
