--- a/Index.html
+++ b/Index.html
@@ -117,14 +117,14 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         <span class="desktop">
 		<div id="Conteudo_zero">
 			<div id="Separador_Dir" style="background-color:#CCCCCC; height: Calc( 24.2vh + 24.2vw); width: Calc( 70vh + 70vw); margin-top: Calc( 0.4vh + 0.4vw); margin-right: Calc( -1vh + -1vw);">
-				<div id="Separador_Dir" style="background-color: Pink; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-right: Calc( 1.5vh + 1.5vw); padding: Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw);">
+				<div id="Separador_Dir" style="height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-right: Calc( 1.5vh + 1.5vw); padding: Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw) Calc( 1.5vh + 1.5vw);">
 					<h1 style="font-family: 'Verdana'; font-size: 2.2vw; color: Red;">Bulb Comercial</h1>
                				<h2 style="font-family:'Mulish', sans-serif;; text-align: justify; font-size:1.5vw; margin-top: Calc(-0.5vh + -0.5vw);"> O Bulb comercial é um conjunto de bots voltados para pequenas e médias empresas que não possuem uma equipe comercial bem estruturada 
 						ou que buscam resultados mais assertivos na captação e contato de leads. Com o Bulb comercial sua organização tem o potencial de capturar contatos de e-mail, Linkedin ou até WhatsApp de leads, cirurgicamente selecionados ou de maneira massiva!</h2>
                 			 <a class="botao" href="Contatos.html" style="margin-top: Calc(0.2vh + 0.2vw); height: Calc( 3vh + 3vw); padding-top: Calc( -0.5vh + -0.5vw);"><b style="font-size: 1.5vw;">SAIBA MAIS!!!</b></a> 
 			</div>
 				</div>
-				<div id="Separador_Esq" style="background-color:Yellow; height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-left: Calc( 3vh + 3vw);">
+				<div id="Separador_Esq" style="height: Calc( 20vh + 20vw); width: Calc( 32vh + 32vw); margin-left: Calc( 3vh + 3vw);">
 					<video controls src="Imagens/2023-05-25 23-27-18_Trim.mp4" style="width: 100%; margin-top: 0.05vh;"></video>
 				</div>
 			</div>
