--- a/Index.html
+++ b/Index.html
@@ -193,13 +193,13 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		</span>
 		<span class="mobile">
-	<div id="Conteudo_zero" style=" background: #FFFF00;">
+	<div id="Conteudo_zero" style=" background:  #CCCCCC;">
 		<div id="Separador_Dir" style="margin-right: Calc( -6vh + -6vw ); margin-top: Calc( 0vh + 0vw );">
 			<h1 style="font-family: 'Verdana'; margin-top: Calc( 0vh + 0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Bulb Comercial</h1>
               		<h2 style="font-family:'Mulish', sans-serif; text-align: justify; font-size: Calc( 2vh + 2vw );margin-top: 0vh; font-style: bold;"> O Bulb comercial é um conjunto de bots voltados para pequenas e médias empresas que não possuem uma equipe comercial bem estruturada ou que buscam resultados mais assertivos na captação e contato de leads. Com o Bulb comercial sua organização tem o potencial de capturar contatos de e-mail, Linkedin ou até WhatsApp de leads, cirurgicamente selecionados ou de maneira massiva!</h2>
         	</div>	  		               
 	</div>
-	<div id="Conteudo_zero" style=" background: #FFFF00;">
+	<div id="Conteudo_zero" style=" background: #CCCCCC; height: Calc( 30vh + 30vw );">
 		<div id="Separador_Dir" style="margin-right: Calc( -6vh + -6vw ); margin-top: Calc( 0vh + 0vw );">
 			<video controls src="Imagens/2023-05-25 23-27-18_Trim.mp4" style="margin-left: Calc( -0.5vh + -0.5vw ); width: 105%; margin-top: -70vh;"></video>
 			<a class="botao" href="Contatos.html" style="margin-left: Calc( 6vh + 6vw ); margin-top: Calc( 7vh + 7vw ); width: Calc( 26.0vh + 26.0vw ); font-size: Calc( 1.8vh + 1.8vw ); height: Calc( 6.5vh + 6.5vw );" ><b>SAIBA MAIS!!!</b></a>
