--- a/Index.html
+++ b/Index.html
@@ -201,7 +201,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 	</div>
 	<div id="Conteudo_zero" style=" background: #CCCCCC; height: Calc( 30vh + 30vw );">
 		<div id="Separador_Dir" style="margin-right: Calc( -9vh + -9vw ); margin-top: Calc( 0vh + 0vw );">
-			<video controls src="Imagens/2023-05-25 23-27-18_Trim.mp4" style="display: flex; flex-direction: column; justify-content: center; align-items: center;  width: Calc( 37vh + 37vw ); margin-top: -70vh;"></video>
+			<video controls src="Imagens/2023-05-25 23-27-18_Trim.mp4" style="display: block; margin: 0 auto;  width: Calc( 37vh + 37vw ); margin-top: -70vh;  width: Calc( 37vh + 37vw ); margin-top: -70vh;"></video>
 			<a class="botao" href="Contatos.html" style="margin-left: Calc( 6vh + 6vw ); margin-top: Calc( 7vh + 7vw ); width: Calc( 26.0vh + 26.0vw ); font-size: Calc( 1.8vh + 1.8vw ); height: Calc( 6.5vh + 6.5vw );" ><b>SAIBA MAIS!!!</b></a>
 		</div>	  		               
 	</div>
