--- a/index (backup).html
+++ b/index (backup).html
@@ -36,6 +36,16 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>	
 		<span class="desktop"><div  id="header-wrap" class="fixed-header_Menu">
 		<!--<header>Teste</header>-->
+			<div class="Headerinterno">
+				<ul class="list" style="font-family: 'Verdana';">
+				      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
+				      <li><a href="Index.html"><b>Home</b></a></li>
+				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
+				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
+				    </ul>
+				
+			</div>	
 		</div></span>
 		
 
