--- a/index (backup).html
+++ b/index (backup).html
@@ -20,7 +20,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
 			<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
-			<!-- <ul class="list">
+			 <ul class="list">
 			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 			      <li><a href="Index.html">Home</a></li>
 			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
