--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
-			<!--<h1>BULB</h1>-->
-			<!--<nav class="nav-horizontal">
+			<h1>BULB</h1>-->
+			<nav class="nav-horizontal">
 			  <div class="mask">
 			    
 			  </div>
