--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
-			<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
+			<!--<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
 			 <ul class="list">
 			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 			      <li><a href="Index.html">Home</a></li>
@@ -28,7 +28,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
 			<h1>BULB</h1>-->
-			<nav class="nav-horizontal">
+			<!--<nav class="nav-horizontal">
 			  <div class="mask">
 			    
 			  </div>
