--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
 			<!--<h1>BULB</h1>-->
-			<!--<nav class="nav-horizontal">
+			<nav class="nav-horizontal">
 			  <div class="mask">
 			    
 			  </div>
