--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		<span class="desktop">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
-		<div id="Conteudo_zero" style="background-image: url('Imagens/Background.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;">
+		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png'); background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -13.5%; height: 37vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
