--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -13.5%; height: 37vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
-			<h1 style="margin-top: -5.0vh; font-family: 'Georgia'; font-size: 2.2vw;">Automação & Tecnologia</h1>
-			<p class="index" style="font-family: 'Mulish', sans-serif;;margin-top: 1.0%;font-size: 1.2vw;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
+			<h1 style="margin-top: -5.0vh; font-family: 'Georgia'; font-size: 2.2vw; color: black;">Automação & Tecnologia</h1>
+			<p class="index" style="font-family: 'Mulish', sans-serif;;margin-top: 1.0%;font-size: 1.2vw;color: black;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
 			<div id="Separador_Esq">
 				
 				
