--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -13.5%; height: 34vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
-			<h1 style="margin-top: -5.0vh; font-family: 'Montserrant'; font-size: 2.2vw; color: black;">Automação & Tecnologia</h1>
+			<h1 style="margin-top: -5.0vh; font-family: 'Verdana'; font-size: 2.2vw; color: black;">Automação & Tecnologia</h1>
 			<p class="index" style="font-family: 'Montserrant', sans-serif;;margin-top: 1.0%;font-size: 1.2vw; color: black;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
 			<div id="Separador_Esq">
 				
@@ -92,7 +92,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Montserrant'; color: white; background-color: red; margin-left: 38%"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 2.2vw; color: white; background-color: red; margin-left: -38%"><b>QUEM SOMOS</b></a>
 			</div>
 			
 		</div>
