--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>	
 		<span class="desktop"><div  id="header-wrap" class="fixed-header_Menu">
 		<!--<header>Teste</header>-->
-			<div class="Headerinterno">
+			<!--<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
 				      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 				      <li><a href="Index.html"><b>Home</b></a></li>
@@ -45,15 +45,9 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
 				
-			</div>	
+			</div>	 -->
 		</div></span>
-		
 
-
-		<!--<div id="header-wrap" class="Barra_Menu">
-			<a href="C:/Users/novai/Desktop/BULB/Por que contratar.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
-			
-		</div>--> 
 <span class="mobile">
 	
             <div id="menuToggle">
@@ -84,7 +78,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -13.5%; height: 34vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
-			<h1 style="margin-top: -5.0vh; font-family: 'Verdana'; font-size: 2.2vw; color: black;">Automação & Tecnologia</h1>
+			<h1 style="margin-top: -5.0vh; font-family: 'Verdana'; font-size: 2.6vw; color: black;">Automação & Tecnologia</h1>
 			<p class="index" style="font-family: 'Montserrant', sans-serif;;margin-top: 1.0%;font-size: 1.2vw; color: black;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
 			<div id="Separador_Esq">
 				
@@ -92,7 +86,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.1vw; color: white; background-color: red; margin-left: -28%"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; background-color: red; margin-left: -23%"><b>QUEM SOMOS</b></a>
 			</div>
 			
 		</div>
