--- a/index.html
+++ b/index.html
@@ -79,14 +79,11 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -13.5%; height: 34vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
 			<h1 style="margin-top: -5.0vh; font-family: 'Verdana'; font-size: 2.6vw; color: black;">Automação & Tecnologia</h1>
-			<p class="index" style="font-family: 'Montserrant', sans-serif;;margin-top: 1.0%;font-size: 1.2vw; color: black;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
-			<div id="Separador_Esq">
-				
-				
+			<div id="Separador_Esq">	
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; background-color: red; margin-left: -23%"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 34vh; width: 33.2vw; background-color: red; margin-left: -23%"><b>ACESSE</b></a>
 			</div>
 			
 		</div>
