--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
 		<div id="Conteudo_rodape">
 			<br><br><br>
-			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
+			<!--<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br><br>
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Email: </h2><h3 class="rodape">contato@bulbautomacoes.com.br</h3><br><br>-->
 			
 		</div>
-		</span>
+		<!--</span>-->
 		<span class="mobile">
 		<!--<div id="Conteudo_Impar">
 			<h1>Invista em tecnologia da automação e multiplique seus resultados em mais de 500%</h1>
