--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
 		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png'); background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<div id="Logo_Index">
-				<img src="Imagens/Indexlogo.png" style="  margin-left: -9.5%; height: 34vh; width: 33.2vw; margin-top: -3.0vh;">
+				<img src="Imagens/Indexlogo.png" style="  margin-left: 9.5%; height: 34vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
 			<h1 style="margin-top: -5.0vh; font-family: 'Verdana'; font-size: 2.6vw; color: black;">Automação & Tecnologia</h1>
 			<div id="Separador_Esq">	
@@ -105,7 +105,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 		</div>
         </span>
-		<div id="Conteudo_rodape">
+		<div id="Conteudo_rodape" style="background-image: url('Imagens/Bck.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<br><br><br>
 			<!--<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br><br>
