--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 		</div>
         </span>
-		<div id="Conteudo_rodape" style="background-image: url('Imagens/Bck.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
+		<div id="Conteudo_rodape" style="background-color: red;background-position: center;background-repeat: no-repeat;width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw)">
 			<br><br><br>
 			<!--<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br><br>
