--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
-			<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
+			<!--<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
 			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 			      <li><a href="Index.html">Home</a></li>
@@ -105,7 +105,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 		</div>
         </span>
-		<div id="Conteudo_rodape" style="background-color: red;background-position: center;background-repeat: no-repeat;width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw)">
+		<div id="Conteudo_rodape" style="background-color: red;background-position: center;background-repeat: no-repeat;width: Calc( 70vh + 70vw); height: Calc( 5vh + 5vw)">
 			<br><br><br>
 			<!--<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br><br>
