--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		<span class="desktop">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
-		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png'); background-position: center;background-repeat: no-repeat;background-size: cover;width: Calc( 20vh + 20vw);">
+		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png'); background-position: center;background-repeat: no-repeat;background-size: cover;width: Calc( 70vh + 70vw);">
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: 9.5%; height: 34vh; width: 33.2vw; margin-top: -3.0vh;">
 			</div>
@@ -83,7 +83,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 14vh; width: 13.2vw; background-color: red; margin-left: -23%; margin-botton: 23%"><b>ACESSE</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 14vh; width: 13.2vw; background-color: red; margin-left: -23%; margin-bottom: 23%"><b>ACESSE</b></a>
 			</div>
 			
 		</div>
