--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 14vh; width: 13.2vw; background-color: red; margin-left: -23%; margin-bottom: 9%"><b>ACESSE</b></a>
+				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/bulb-automa-o-tecnologia-empresa-fornecedora-de-servi-o-de-desenvolvimento-aplica-o-e-suporte-de-automa-es-de-processos-virtuais" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 14vh; width: 13.2vw; background-color: red; margin-left: -23%; margin-bottom: 9%"><b>ACESSE</b></a>
 			</div>
 			
 		</div>
