--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -159.5%; height: 31vh; width: 30.2vw; margin-top: -5.0vh;">
 			</div>
-			<h1 style="margin-top: -11.0vh; font-family: 'Verdana'; font-size: 2.6vw; color: black;">Automação & Tecnologia</h1>
+			<h1 style="margin-top: -11.0vh; font-family: 'Verdana'; font-size: 2.6vw; color: black; margin-left: -15%;">Automação & Tecnologia</h1>
 			<div id="Separador_Esq">	
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/bulb-automa-o-tecnologia-empresa-fornecedora-de-servi-o-de-desenvolvimento-aplica-o-e-suporte-de-automa-es-de-processos-virtuais" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 14vh; width: 13.2vw; background-color: red; margin-left: -23%; margin-bottom: 9%"><b>ACESSE</b></a>
+				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/bulb-automa-o-tecnologia-empresa-fornecedora-de-servi-o-de-desenvolvimento-aplica-o-e-suporte-de-automa-es-de-processos-virtuais" style="font-family: 'Verdana'; font-size: 1.9vw; color: white; height: 14vh; width: 13.2vw; background-color: red; margin-left: -15%; margin-bottom: 9%"><b>ACESSE</b></a>
 			</div>
 			
 		</div>
