--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div class="Headerinterno">
 			<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
 			 <ul class="list">
-			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
+			    <!--  <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
 			      <li><a href="Index.html">Home</a></li>
 			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
-			<h1>BULB</h1>-->
-			<nav class="nav-horizontal">
-			  <div class="mask">
+			<!--<h1>BULB</h1>-->
+			<!--<nav class="nav-horizontal">
+			<!--  <div class="mask">
 			    
 			  </div>
 			</nav> -->
