--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
         </span>
         <span class="mobile">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
-		<div id="Conteudo_zero" style="background-image: url('Imagens/Bck.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
+		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<div id="Logo_Index">
 				<img alt="Automatização de processos" src="Imagens/Indexlogo.png" style="  margin-left: Calc( -13vh + -13vw ); width: Calc( 40vh + 40vw );">
 			</div>
 			<h1 style=" font-family: 'Georgia'; font-size: Calc( 1vh + 1vw );"></h1>
-			<p class="index" style="font-family: 'Mulish', sans-serif;;width: Calc( 40vh + 40vw ); margin-top: Calc( -1vh + -1vw ); font-size: Calc( 1.7vh + 1.7vw ); margin-left: Calc( 2vh + 2vw );"><b style=" font-family: 'Georgia'; font-size: Calc( 3vh + 3vw );margin-bottom: Calc( -5vh + -5vw );color: black; font-style: bold;"> Automação e Tecnologia</b><br><br><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
+			<p class="index" style="font-family: 'Mulish', sans-serif;;width: Calc( 40vh + 40vw ); margin-top: Calc( -1vh + -1vw ); font-size: Calc( 1.7vh + 1.7vw ); margin-left: Calc( 2vh + 2vw );"><b style=" font-family: 'Georgia'; font-size: Calc( 3vh + 3vw );margin-bottom: Calc( -5vh + -5vw );color: black; font-style: bold;"> Automação e Tecnologia</b><br></u></b></p>
 			<div id="Separador_Esq">
 				
 				
 			</div>
 			
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana';margin-left: Calc( -31vh + -31vw); width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw); margin-top: Calc( 27vh + 27vw);font-size: Calc( 2vh + 2vw);"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Verdana';margin-left: Calc( -31vh + -31vw); width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw); margin-top: Calc( 27vh + 27vw);font-size: Calc( 2vh + 2vw);"><b>Acesse</b></a>
 			
 		</div>
         </span>
