--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				
 			</div>
 			
-				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/home" style="font-family: 'Verdana';margin-left: Calc( -31vh + -31vw); width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw); margin-top: Calc( 27vh + 27vw);font-size: Calc( 2vh + 2vw); margin-bottom: 50%"><b>Acesse</b></a>
+				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/home" style="font-family: 'Verdana';margin-left: Calc( -31vh + -31vw); width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw); margin-top: Calc( 27vh + 27vw);font-size: Calc( 2vh + 2vw); margin-top: -5%"><b>Acesse</b></a>
 			
 		</div>
         </span>
