--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>	 -->
 		</div></span>
 
-<span class="mobile">
+<!--<span class="mobile">
 	
             <!--<div id="menuToggle">
               <input type="checkbox">
@@ -65,9 +65,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
             </ul>
            </div>-->
           
-	</span>
-
-	</div>
+	
 	<body>
 		<div id="header-wrap" class="Barra_Suavização">
 			
