--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>	 -->
 		</div></span>
 
-<!--<span class="mobile">
-	
-            <!--<div id="menuToggle">
+<span class="mobile">
+		
+            <div id="menuToggle">
               <input type="checkbox">
                 <span></span>
                 <span></span>
@@ -63,8 +63,11 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
               <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Quem Somos?</a></li>
 	      <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -27vh + -27vw)">Contate-Nos</a></li>
             </ul>
-           </div>-->
+           </div>
           
+	</span>
+
+	</div>
 	
 	<body>
 		<div id="header-wrap" class="Barra_Suavização">
