--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				
 			</div>
 			
-				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/home" style="font-family: 'Verdana';margin-left: Calc( -31vh + -31vw); margin-top: Calc( 2vh + 2vw ); width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw); font-size: 2.9vw"><b>Acesse</b></a>
+				<a class="botao_Quem_somos" href="https://akakgrill.my.canva.site/home" style="font-family: 'Verdana';margin-left: Calc( -31vh + -31vw); margin-top: 20%; width: Calc( 20vh + 20vw); height: Calc( 7vh + 7vw); font-size: 5.9vw"><b>Acesse</b></a>
 			
 		</div>
         </span>
