--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="Pt-BR">
 	<link href="Css/Style.css" rel="stylesheet">
-	<link media="only screen and (max-device-width: 280px)" href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
+	<link href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
 
 	<head>
 	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
