--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 	  <title> Bulb Automações </title>
 	  
 	</head>
-
+		<div  id="header-wrap" class="fixed-header">
+		<!--<header>Teste</header>-->
+		<div class="Headerinterno">
+			<!--<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
+			<!-- <ul class="list">
+			      <li><a href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
+			      <li><a href="Index.html">Home</a></li>
+			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
+			      <li><a href="Quem Somos.html">Quem somos?</a></li>
+			      <li><a href="Contatos.html">Contate-Nos</a></li>
+			    </ul> -->
+			<!--<h1>BULB</h1>-->
+			<!--<nav class="nav-horizontal">
+			<!--  <div class="mask">
+			    
+			  </div>
+			</nav> -->
+		</div>	
 		<span class="desktop"><div  id="header-wrap" class="fixed-header_Menu">
 		<!--<header>Teste</header>-->
 			<!--<div class="Headerinterno">
@@ -31,31 +48,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>	 -->
 		</div></span>
 
-<span class="mobile">
-		
-         <!--   <div id="menuToggle">
-              <input type="checkbox">
-                <span></span>
-                <span></span>
-                <span></span>
 
-            <ul id="menu">
-              <li><a class="Menu_botao" href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
-              <li><a class="Menu_botao" href="Index.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Home</a></li>
-              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -16vh + -16vw)">Sobre o RPA</a></li>
-              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Quem Somos?</a></li>
-	      <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -27vh + -27vw)">Contate-Nos</a></li>
-            </ul>
-           </div>-->
-          
-	</span>
-
-	</div>
-	
-	<body>
-		<div id="header-wrap" class="Barra_Suavização">
-			
-		</div>
 		<span class="desktop">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
 		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png'); background-position: center;background-repeat: no-repeat;background-size: cover;width: Calc( 70vh + 70vw);">
