--- a/index.html
+++ b/index.html
@@ -47,7 +47,31 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				
 			</div>	 -->
 		</div></span>
+<span class="mobile">
+		
+         <!--   <div id="menuToggle">
+              <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
 
+            <ul id="menu">
+              <li><a class="Menu_botao" href="https://sites.google.com/view/bulbtheherald/in%C3%ADcio">The Herald</a></li>
+              <li><a class="Menu_botao" href="Index.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Home</a></li>
+              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -16vh + -16vw)">Sobre o RPA</a></li>
+              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Quem Somos?</a></li>
+	      <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -27vh + -27vw)">Contate-Nos</a></li>
+            </ul>
+           </div>-->
+          
+	</span>
+
+	</div>
+	
+	<body>
+		<div id="header-wrap" class="Barra_Suavização">
+			
+		</div>
 
 		<span class="desktop">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
