--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
           
 	</span>
 
-		</div>
+		<!--</div>-->
 	
-		<body>
+	<body>
 		<div id="header-wrap" class="Barra_Suavização">
 			
 		</div>
