--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 	  <title> Bulb Automações </title>
 	  
 	</head>
-		<div  id="header-wrap" class="fixed-header">
+		<!--<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
 			<!--<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
