--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 	  <title> Bulb Automações </title>
 	  
 	</head>
-		<!--<div  id="header-wrap" class="fixed-header">
+		<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
 			<!--<img alt="Automatize com a Bulb" src="Imagens/Logo1.png" style="height: 9vh;">
@@ -68,7 +68,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 
 		<!--</div>-->
 	
-	<body>
+	
 		<div id="header-wrap" class="Barra_Suavização">
 			
 		</div>
@@ -88,7 +88,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 		</div>
-        </span>
+                </span>
         <span class="mobile">
 		<!--<div id="Conteudo_zero" style="background-image: url('Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">-->
 		<div id="Conteudo_zero" style="background-image: url('Imagens/Background Grey.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
