--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 		</div>
         </span>
+
+		<span class="desktop">
 		<div id="Conteudo_rodape" style="background-color: red;background-position: center;background-repeat: no-repeat;width: Calc( 70vh + 70vw); height: Calc( 5vh + 5vw)">
 			<br><br><br>
 			<!--<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br><br>		 
@@ -114,10 +116,10 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<h2 class="rodape" style="margin-left: Calc( 0.5vh + 0.5vw);">Email: </h2><h3 class="rodape">contato@bulbautomacoes.com.br</h3><br><br>-->
 			
 		</div>
-		<!--</span>-->
+		</span>
 		<span class="mobile">
-		
-		<div id="Conteudo_rodape">
+		<div id="Conteudo_rodape" style="background-color: red;background-position: center;background-repeat: no-repeat;width: Calc( 70vh + 70vw); height: Calc( 5vh + 5vw)">
+		<!--<div id="Conteudo_rodape">-->
 		</div>
 		</span>
 	</body>
